feat: Rebrand app to ReportSnapy

--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Garbage Buddy</title>
-    <!-- Your script tag should NOT be here anymore -->
+    <title>ReportSnapy</title>
   </head>
   <body>
-    <div id="root"></div> 
-    <!-- The decorator's target wall -->
-    
-    <!-- The decorator arrives AFTER the wall is built -->
-    <script type="module" src="/src/main.jsx"></script> 
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
